# att

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  hey  install-tdd-skill.sh  pyproject.toml
.github/workflows/: main-full.yml  pr-quick.yml
configs/: README.md
done/: README.md  master_plan_implementation_progress_archive_2026-02-13.md  next_machine_handoff_recent_delivered_work_archive_2026-02-13.md
scripts/: handoff_helper.py  update_handoff_snapshot.sh
src/att/: __init__.py
tests/e2e/: test_placeholder.py
tests/integration/: test_api_feature_endpoints.py  test_api_health.py  test_api_mcp.py  test_api_projects.py  test_api_self_bootstrap.py  test_api_workflows_events.py  test_mcp_transport.py
tests/property/: __init__.py  test_status_property.py
tests/support/: mcp_convergence_helpers.py  mcp_helpers.py  mcp_nat_helpers.py
tests/unit/: test_code_manager.py  test_code_tools.py  test_debug_tools.py  test_deploy_tools.py  test_docs_guardrails.py  test_git_tools.py  test_handoff_helper_script.py  test_mcp_client.py  test_mcp_server.py  test_models.py  test_project_manager.py  test_project_tools.py  test_resource_refs.py  test_runtime_manager.py  test_runtime_tools.py  test_self_bootstrap_integrations.py  test_self_bootstrap_manager.py  test_store.py  test_test_runner.py  test_test_tools.py  test_tool_orchestrator.py
todo/: NEXT_MACHINE_HANDOFF.md  master_plan.md  proposed_process_changes.md
todo/plans/: advanced_debugging.md  ci_github_actions.md  cloud_deploy.md  code_manager.md  data_models.md  web_ui.md  (+20 more)
ui/: README.md
(+51 files in other folders)
