[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "att"
version = "0.1.0"
description = "Agent Toolkit Toolkit"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "ATT Contributors" }]
dependencies = [
  "nvidia-nat[mcp]>=1.4,<1.5",
  "httpx>=0.27,<0.29",
  "aiosqlite>=0.20,<0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-timeout>=2.3,<3",
  "pytest-cov>=5,<7",
  "hypothesis>=6.112,<7",
  "playwright>=1.48,<2",
  "mypy>=1.11,<2",
  "ruff>=0.6.5,<1",
  "coverage>=7.6,<8",
]

[project.scripts]
att-api = "att.api.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/att"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q --cov=att --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
mypy_path = ["src"]
packages = ["att"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "T20"]
ignore = ["B008", "S101", "S104", "S108", "S603", "S607", "UP042"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
